Fix: improve readability on tablets

--- a/src/10-typography/group-c.less
+++ b/src/10-typography/group-c.less
@@ -57,7 +57,7 @@
 
 .type-longprimer() {
     font-size: 16px;
-    line-height: 22px;
+    line-height: 20px;
 }
 
 .type-brevier() {
@@ -66,7 +66,7 @@
 }
 
 .type-minion() {
-    font-size: 13px;
+    font-size: 12px;
     line-height: 16px;
 }
 
