--- a/src/99-themes/article-left-sidebar/reference/colors.less
+++ b/src/99-themes/article-left-sidebar/reference/colors.less
@@ -24,6 +24,9 @@
 @darken-amount: 10%;
 @lighten-amount: 10%;
 
+@main-p-color: #404040;
+@main-strapline-color: #000;
+
 @sidebar-bg-color: #ddd;
 @sidebar-fg-color: #303030;
 
